--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.28.4",
     "axios": "^1.6.8",
+    "localstorage-slim": "^2.7.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
