--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
     "react-toggle-dark-mode": "^1.1.1"
   },
