--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^7.111.0",
     "@tanstack/react-query": "^5.28.4",
     "axios": "^1.6.8",
     "localstorage-slim": "^2.7.0",
@@ -21,6 +22,7 @@
     "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "^2.16.1",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
